<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/pv_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_surface"
        android:visibility="gone">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            app:indicatorSize="48dp"
            app:trackColor="@color/color_card_hint"
            app:trackCornerRadius="10dp"
            app:trackThickness="5dp" />

    </RelativeLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_empty_favorite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_surface"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            app:lottie_autoPlay="true"
            app:lottie_imageAssetsFolder="assets/"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/no_net" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_is_empty"
            android:textColor="?android:textColorTertiary"
            android:textSize="14sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_error_network"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_surface"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/welcome_arrow_animation"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            app:lottie_autoPlay="true"
            app:lottie_imageAssetsFolder="assets/"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/no_net" />


        <TextView
            android:id="@+id/tv_error_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_internet_connection"
            android:textColor="?android:textColorTertiary"
            android:textSize="14sp" />

        <Button
            android:id="@+id/bt_error_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:text="@string/retry" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_error_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_surface"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            app:lottie_autoPlay="true"
            app:lottie_imageAssetsFolder="assets/"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/no_net" />


        <TextView
            android:id="@+id/tv_error_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/no_data_available" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>