<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/food_boarding_one"
        app:layout_constraintBottom_toTopOf="@+id/gl_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedCornersBottomOn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font_medium"
        android:text="@string/guide_one_one_translate_in_real_time"
        android:textAlignment="center"
        android:textColor="@color/text_primary"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gl_guideline"
        app:layout_constraintWidth_percent="0.90" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/font_regular"
        android:lines="3"
        android:text="@string/guide_one_two_translate"
        android:textAlignment="center"
        android:textColor="@color/text_third"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintWidth_percent="0.85" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/welcome_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description">

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@drawable/oval_bg_blue" />

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/oval_bg_blue"
            android:backgroundTint="@color/color_card_hint" />

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@drawable/oval_bg_blue"
            android:backgroundTint="@color/color_card_hint" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.cardview.widget.CardView
        android:id="@+id/welcome_start"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:foreground="?selectableItemBackground"
        app:cardBackgroundColor="@color/color_button_active"
        app:cardCornerRadius="24dp"
        app:cardElevation="0.0dip"
        app:layout_constraintBottom_toTopOf="@+id/vw_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.80">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/font_medium"
            android:gravity="center"
            android:text="@string/get_started"
            android:textAllCaps="true"
            android:textColor="@color/color_title"
            android:textSize="16sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/welcome_arrow_animation"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="20dp"
            app:lottie_autoPlay="true"
            app:lottie_imageAssetsFolder="assets/"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/iap" />

    </androidx.cardview.widget.CardView>


    <View
        android:id="@+id/vw_space"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

