<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#1F7E9AFF"
        app:cardCornerRadius="12dp"
        app:cardElevation="0.5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/banner_title_holder"
                android:layout_width="1dp"
                android:layout_height="1dp"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintLeft_toLeftOf="@+id/banner_img"
                app:layout_constraintRight_toRightOf="@+id/banner_img"
                tools:ignore="MissingConstraints" />

            <View
                android:id="@+id/banner_gradient"
                android:layout_width="1dp"
                android:layout_height="1dp"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintLeft_toLeftOf="@+id/banner_img"
                app:layout_constraintRight_toRightOf="@+id/banner_img"
                tools:ignore="MissingConstraints" />


            <ImageView
                android:id="@+id/banner_img"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="348:148"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/banner_more_holder"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/shape_shadow_right_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/banner_gradient"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/banner_title"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/font_medium"
                android:gravity="start|center_vertical|center_horizontal|center"
                android:maxLines="3"
                android:text="@string/beginner_s_guide"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:autoSizeMaxTextSize="18dp"
                app:autoSizeMinTextSize="4dp"
                app:autoSizeStepGranularity="1dp"
                app:layout_constraintHeight_percent="0.375"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/banner_title_holder"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/banner_more"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/color_green"
                app:cardCornerRadius="14dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/banner_img"
                app:layout_constraintHeight_max="136dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/banner_title">

                <TextView
                    android:id="@+id/banner_more_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/font_medium"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/explore_learn_more"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:autoSizeMaxTextSize="14dp"
                    app:autoSizeMinTextSize="4dp"
                    app:autoSizeStepGranularity="1dp" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
